--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1BHkT6OGp9zvux1KrS7tnHGOFLc5biVOZ5OT3InCpw84/edit?usp=sharing">Pitched Problems</a>
 		<a class="btn btn-lg btn-black-outline btn-black" href="https://app.acuityscheduling.com/schedule.php?owner=18270112"> Mentor Sign Up </a>
 		<a class="btn btn-lg btn-black-outline btn-black" href="https://forms.gle/yQBK1vZsx58SubTz5"> Team Sign Up </a>
-		<!-- <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1S3m6EKISFH3MZQWGR_H0YuJFksf8OEXA7DRRQwkjt-c/edit?usp=sharing"> Hacking 101 </a> -->
+		<a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1S3m6EKISFH3MZQWGR_H0YuJFksf8OEXA7DRRQwkjt-c/edit?usp=sharing"> Hacking 101 </a>
 
                 <!-- <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/HDOgYEcS4FRmbxmr1">FEEDBACK FORM</a> -->
 
