--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
 
 			</p>
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09/13/19 - SUN 09/15/19</a> <a class="btn btn-lg btn-danger" href="https://forms.gle/zY4SHifa1HqG6hvm8">RSVP Here</a>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09/13/19 - SUN 09/15/19</a> 
+		<!-- <a class="btn btn-lg btn-danger" href="https://forms.gle/zY4SHifa1HqG6hvm8">RSVP Here</a> -->
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/forms/d/e/1FAIpQLSc965YPxiZYWzo6LwShHt2Tq_lesqObxF5Ybssek8md_-FhZw/viewform?usp=sf_link">Submit Presentation by 1:00PM (Sunday)</a>
 		<a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/document/d/1NWJ48CM2f9rUgCZ4IiF5aXIAM9HmuyTyBOVQuS2ZVLo/edit"> Pain Points </a>
 		<a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1BHkT6OGp9zvux1KrS7tnHGOFLc5biVOZ5OT3InCpw84/edit?usp=sharing">Pitched Problems</a>
